2008-01-31  Jan Schmidt  <Jan.Schmidt@sun.com>

	* gst/.cvsignore:
	Ignore generated pbutils.c
	* gst/gst.override:
	Fix compiler warning about the return type.

2008-01-30  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/gstmodule.c: (init_gst):
	Remove do_pending_calls timeout which has been handled more gracefully
	in pygobject MainLoop for the past 3 years.
	Fixes #512916

2008-01-28  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to CVS

=== release 0.10.10 ===

2008-01-28  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.10, "Destination Overtime"

2008-01-21  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.9.4 pre-release

2008-01-21  Jan Schmidt  <jan.schmidt@sun.com>

	* Makefile.am:
	Include PYTHON_INCLUDES in the common CFLAGS in the top-level.
	Fixes: #510437
	Patch By: Luca Ferretti <elle dot uca at libero dot it>

2008-01-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.9.3 pre-release

2008-01-16  Tim-Philipp Müller  <tim at centricular dot net>

	Reviewed by : Edward Hervey  <edward.hervey@collabora.co.uk>
	* configure.ac:
	* win32/common/config.h.in:
	Fix symbol generation for win32.
	Fixes #509766

2008-01-15  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/pbutils.override:
	Fix compilation against Python 2.4.
	Fixes: #509522

2008-01-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.10.9.2 pre-release

2008-01-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	* gst/Makefile.am:
	* gst/base.defs:
	* gst/gst-0.10.15.ignore:
	* gst/gst-0.10.16.ignore:
	* gst/gst-pb-0.10.15.ignore:
	* gst/gst-pb-0.10.16.ignore:
	* gst/gst.defs:
	* gst/gstversion.override.in:
	* gst/pbutils.override:
	* testsuite/test_pbutils.py:
	Series of update for new API added to 0.10.16.
	Remove wrong ignore file for 0.10.15 -base.

2008-01-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	Bump requirement to core and -base >= 0.10.12 .